--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/open-book.png" />
+    <link rel="icon" type="image/svg+xml" href="./public/open-book.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The nextPage</title>
   </head>
